adding files for github pages

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,11 @@
 .App {
   text-align: center;
 }
+h1{
+  font-family: 'Bigelow Rules', cursive;
+  font-size: 72px;
+  color: #0ccac4;
+}
 
 .App-logo {
   height: 40vmin;
