--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,11 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: linear-gradient(
+  to right,
+  rgb(250, 250, 110) 0%,
+  rgb(119, 209, 131) 100%
+  );
 }
 
 code {
